# DataProspectSteam

./: .gitignore  N0_Main.py  N1_Call_API.py  N2_Insert_BDD.py  N3_Data_Upload.py  N3_Rest_API.py  N7_Rest_API.py  N8_Rest_API.py  N9_DBviewer.py  Readme_ToDoListe.txt  Untitled-1.py  pyproject.toml  steam_games_info.db  steam_games_reviews.db  test.py
