[tool.poetry]
name = "dataprospectsteam"
version = "0.1.0"
description = ""
authors = ["M-Drs <martin.deyres@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
deltalake = "^0.25.5"
pyarrow = "^19.0.1"
fastapi = "^0.115.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
